--- a/index.html
+++ b/index.html
@@ -1,130 +1,186 @@
-
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/styles-espresso-cafe/home.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      defer
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
 
-<head>
+    <title>Espresso Café</title>
+  </head>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="stylesheet" href="/styles-espresso-cafe/home.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" defer
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
+  <body>
+    <div id="navbar"></div>
 
-  <title>Espresso Café</title>
+    <main>
+      <div>
+        <div class="mainBanner">
+          <div class="homeTitle">
+            <h1 class="home-main-title">Deja que el café nos conecte</h1>
+            <a href="/pages/menu.html" class="button-ordena-ahora">
+              <i class="fas fa-mug-hot me-2"></i>
+              Ordena Ahora
+            </a>
+          </div>
+        </div>
+      </div>
 
-</head>
+      <section class="px-3">
+        <div class="container mt-4 mb-4">
+          <div class="row">
+            <!-- Carrusel 1 -->
+<div class="col-md-12 col-lg-6">
+  <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+    <div
+      class="carousel-caption-fixed position-absolute top-50 start-50 translate-middle text-center"
+    >
+      <h2 class="text-carousel1">¡Disfruta nuestros sabores clásicos!</h2>
+    </div>
 
-<body>
+    <div class="carousel-inner">
+      <div
+        class="carousel-item active position-relative"
+        data-bs-interval="3000"
+      >
+        <img
+          src="/assets/espresso-cafe1.jpeg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div
+        class="carousel-item position-relative"
+        data-bs-interval="3000"
+      >
+        <img
+          src="/assets/espresso-cafe 2.jpeg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+    </div>
 
-
-
-  <div id="navbar"></div>
-
-
-
-
-
-  <main>
-    <div>
-      <div class="mainBanner">
-        <div class="homeTitle">
-          <h1 class="home-main-title">Deja que el café nos conecte</h1>
-          <a href="/pages/menu.html" 
-       class="button-ordena-ahora ">
-      <i class="fas fa-mug-hot me-2"></i>
-      Ordena Ahora
+    <!-- ✅ Botón único, centrado al fondo -->
+    <a
+      href="/pages/menu.html"
+      class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3 z-3"
+    >
+      Ver más
     </a>
-        </div>
-      </div>
-    </div>
-  
-  <section>
-    <div class="container mt-4 mb-4">
-      <div class="row">
-        <!-- Carrusel 1 -->
-        <div class="col-md-6 ">
-          <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active position-relative" data-bs-interval="3000">
-                <img src="/assets/espresso-cafe1.jpeg" class="d-block w-100" alt="...">
-                <div class="position-absolute bottom-50 start-50 translate-middle-x mb-5 z-2">
-    <p class="text-white ">
-      Términos y condiciones
-    </p>
+
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carousel1"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carousel1"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-                <a href="https://pagina1.com"
-                  class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
-                  Ver más
-                </a>
-              </div>
-              <div class="carousel-item position-relative" data-bs-interval="3000">
-                <img src="/assets/espresso-cafe 2.jpeg" class="d-block w-100" alt="...">
-                 <a href="/pages/menu.html"
-                  class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
-                  Ver más
-                </a>
+</div>
+
+            <!-- Carrusel 2 -->
+            <div class="col-md-12 col-lg-6">
+              <div
+                id="carousel2"
+                class="carousel slide"
+                data-bs-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div
+                    class="carousel-caption-fixed position-absolute top-50 start-50 translate-middle text-center"
+                  >
+                    <h2 class="text-carousel2">¡Conoce nuestra historia!</h2>
+                  </div>
+
+                  <div
+                    class="carousel-item active position-relative"
+                    data-bs-interval="3000"
+                  >
+                    <img
+                      src="/assets/espreso-cafe 3.jpeg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <a
+                      href="/pages/acercaDe.html"
+                      class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3"
+                    >
+                      Ver Más
+                    </a>
+                  </div>
+                  <div
+                    class="carousel-item position-relative"
+                    data-bs-interval="3000"
+                  >
+                    <img
+                      src="/assets/espresso-cafe4.jpeg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <a
+                      href="/pages/acercaDe.html"
+                      class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3"
+                    >
+                      Ver más
+                    </a>
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carousel2"
+                  data-bs-slide="prev"
+                >
+                  <span class="carousel-control-prev-icon"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carousel2"
+                  data-bs-slide="next"
+                >
+                  <span class="carousel-control-next-icon"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
         </div>
+      </section>
+    </main>
 
-        <!-- Carrusel 2 -->
-        <div class="col-md-6">
-          <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active position-relative" data-bs-interval="3000">
-                <img src="/assets/espreso-cafe 3.jpeg" class="d-block w-100" alt="...">
-                <a href="/pages/acercaDe.html"
-                  class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3 ">
-                  Ver Más
-                </a>
-              </div>
-              <div class="carousel-item position-relative" data-bs-interval="3000">
-                <img src="/assets/espresso-cafe4.jpeg" class="d-block w-100" alt="...">
-                <a href="/pages/acercaDe.html"
-                  class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3">
-                  Ver más
-                </a>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
-
-
-
-</main>
-
-
-  <div id="footer"></div>
-  <script type="module" src="./js/main.js"></script>
-
-</body>
-
+    <div id="footer"></div>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html> 
